# devlink

./: .gitignore  Makefile.am  README  configure.ac
include/: Makefile.am  mnlg.h
include/linux/: devlink.h
include/private/: list.h  misc.h
libmnlg/: Makefile.am  libmnlg.c  libmnlg.pc.in
man/: Makefile.am  dl.8
utils/: Makefile.am  dl.c
